Setup max widths and fix wrapping.

--- a/src/static/css/account.css
+++ b/src/static/css/account.css
@@ -7,6 +7,7 @@
     align-self: center;
     gap: 1rem;
     width: 80vw;
+    max-width: 1280px;
     align-content: space-between;
     background-color: transparent;
     justify-content: space-evenly;
@@ -17,14 +18,14 @@
     display: flex;
     flex-direction: column;
     width: 45%;
-    min-width: 400px;
+    min-width: 630px;
 }
 
 .content_box {
-    width: 100%;
     padding: 1rem;
     background: rgb(43, 42, 51);
     border-radius: 15px;
+    min-width: 590px;
     text-align: center;
     margin: 1rem auto auto auto;
 }
@@ -106,12 +107,15 @@
 }
 
 .model-content input {
-    width: 80%;        /* Limit the width of inputs */
-    padding: 10px;     /* Add padding for better spacing */
+    width: 80%;
+    /* Limit the width of inputs */
+    padding: 10px;
+    /* Add padding for better spacing */
     margin: 5px auto auto auto;
     border: 1px solid #ccc;
     border-radius: 5px;
-    display: block;    /* Ensure they are block elements */
+    display: block;
+    /* Ensure they are block elements */
 }
 
 .model-content button {
@@ -145,17 +149,17 @@
 /* Model Texts */
 
 .model-content label {
-display: block;
-margin-top: 10px;
-font-weight: bold;
-font-size: 16px;
-color: black;
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    color: black;
 }
 
 .model-content h2 {
-display: block;
-margin-top: 10px;
-font-weight: bold;
-font-size: 20px;
-color: black;
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    color: black;
 }
